# disruptsc

./: .gitignore  .gitmodules  CLAUDE.md  CNAME  DISAGGREGATING_IO_ARCHIVE.md  MANIFEST.in  README.md  docs-requirements.txt  dsc-environment.yml  launcher.sh  macros.py  mkdocs.yml  open_issues.md  profile_model_setup.py  pyproject.toml  requirements.txt  setup.py  validate_inputs.py  versions.json
.github/workflows/: docs.yml  release.yml
1.1.6/: 404.html  index.html  main.py  sitemap.xml
1.1.6/applications/: index.html
1.1.6/architecture/: index.html
1.1.6/contact/: index.html
1.1.6/contributors/: index.html
1.1.6/getting-started/: index.html
1.1.6/research/: index.html
1.1.6/search/: search_index.json
1.1.6/user-guide/: index.html
1.1.7/: 404.html  __init__.py  index.html  objects.inv  sitemap.xml
1.1.7/applications/: index.html
1.1.7/architecture/: index.html
1.1.7/contact/: index.html
1.1.7/contributors/: index.html
1.1.7/getting-started/: index.html
1.1.7/research/: index.html
1.1.7/search/: search_index.json
1.1.7/user-guide/: index.html
DisruptSC/functions/: check_functions.py  export_functions.py  functions.py
DisruptSC/transport_network/: transport_network.py
analysis/: plot-results.ipynb  process-results.ipynb  results-analysis.ipynb
code/: builder.py  class_agent.py  class_commerciallink.py  class_country.py  class_firm.py  class_household.py  class_households.py  class_observer.py  class_transport_network.py  export_functions.py  functions.py  main.py  mainBase.py  parameters.py  paths.py  simulations.py  transport_network.py
code/agents/: agent.py  agent_functions.py  country.py  firm.py  household.py
code/disruption/: disruption.py
code/model/: agent_builder_functions.py  basic_functions.py  builder_functions.py  caching_functions.py  check_functions.py  country_builder_functions.py  firm_builder_functions.py  model.py  (+3 more)
dataprep/: CPC21-HS2017.csv  Disruptions.ipynb  GSC-CPC21.csv  GSC-HS.csv  GSC-ISIC4.csv  IOtable.ipynb  ISIC4-CPC21.csv  Inventories.ipynb  InventoriesKHM.ipynb  SupplyPerCanton.ipynb  SupplyPerCanton13sectors.ipynb  SupplyPerDistrict.ipynb  Trade.ipynb  TransportNetwork.ipynb  USDPerTonPerSector.ipynb  ref_cmd_HS.csv  transport_network.py
disruptsc/: _version.py  main.py  parameters.py  paths.py
docs/: deployment.md  index.md  main.py
interactive/: InteractiveModel.ipynb  paths.py
old_code/: check_functions.py  class_agent.py  class_country.py  class_firm.py  class_household.py  class_transport_network.py  export_functions.py  functions.py  mainBase.py  paths.py  simulations.py
parameter/: default.yaml  filepaths.py  filepaths_default.py  old_default.yaml  parameters.py  parameters_default.py  user_defined.yaml  user_defined_Cambodia.yaml  user_defined_ECA.yaml  user_defined_Ecuador.yaml  user_defined_Ecuador_bckp.yaml  user_defined_Global.yaml  user_defined_Testkistan.yaml
scripts/: deploy-docs.sh  profile_model_setup.py  profile_simulation_runtime.py  test_cambodia.sh  test_input_validation.py  validate_inputs.py
src/: main.py  parameters.py
test/: InteractiveModel.ipynb
tmp/: firms_households_countries_pickle  transEdg_roa_mar_pickle  transNet_roa_mar_pickle  transNod_roa_mar_pickle
(+333 files in other folders)
